--- a/MDSound/MDSound/MDSound.csproj
+++ b/MDSound/MDSound/MDSound.csproj
@@ -31,4 +31,7 @@
   <ItemGroup>
     <Content Include="fmgen\readme.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NAudio" Version="2.0.1" />
+  </ItemGroup>
 </Project>
